<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#778899"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_items"
        android:translationY="-220dp"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item1"
        android:translationY="-200dp"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items2"
        android:translationY="-140dp"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items3"
        android:translationY="-80sp"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/white"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="280dp"
        android:text="Return Back"
        android:textSize="24sp"
        android:id="@+id/Return"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addon_label"
        android:translationY="-60dp"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:textColor="@color/white"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addon1"
        android:translationY="-20dp"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addon2"
        android:translationY="60dp"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/white"

        />



</LinearLayout>